# libSocketCom

./: CMakeLists.txt  DoBuild.sh  DoBuildAllPC.sh  LICENSE  README
AppTestInetClient/: CMakeLists.txt
AppTestInetClient/Src/: LogSys.cpp  main.cpp
AppTestInetServer/: CMakeLists.txt
AppTestInetServer/Inc/: DHComp.h
AppTestInetServer/Src/: main.cpp
AppTestLocalClient/: CMakeLists.txt
AppTestLocalClient/Inc/: DHComp.h  LogSys.h
AppTestLocalClient/Src/: main.cpp
AppTestLocalServer/: CMakeLists.txt  DoBuild.sh
AppTestLocalServer/Inc/: DHComp.h
AppTestLocalServer/Src/: main.cpp
ExpInc/: SocketCom.h
Inc/: DHComp.h  Ls_Aux.h  Ls_LogSys.h
Src/: Ls_Aux.cpp  Ls_LogSys.cpp  SocketCom.cpp
